# MpRpc

./: CMakeLists.txt  README.md
example/: user.proto
example/callee/: userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
test/protobuf/: main  main.cpp  test.pb.cc  test.pb.h  test.proto
